# markshark

./: .gitignore  LICENSE.txt  PDF_COMPRESSION_IMPROVEMENTS.md  PROJECT_MODE_GUIDE.md  README.md  TEMPLATE_MANAGER_FEATURES.md  pyproject.toml  test_template_manager.py
.github/DISCUSSION_TEMPLATE/: announcements.yml  ideas.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: CLI_REFERENCE.md  QUICKSTART.md  markshark_scoring_guide.md
helpful scripts/: anonymize_sheets.py  compress_pdf.py  interdigitate_scanned_pdf.py  make-mock-answer-set.py  pngs_to_pdf.py  scan_aligner_BIG.py  scan_aligner_WORKS_NOARUCO.py  zone calculator.xlsx
helpful scripts/fake_student_data/: 100fake_students.csv  64Q-config.yaml  bubble_synth.py  fake_students.csv  results.csv  samplecommands.txt
src/markshark/: __init__.py  align_core.py  app_streamlit.py  bublmap_io.py  cli.py  config_io.py  defaults.py  grade_core.py  gui_launcher.py  preferences.py  project_utils.py  score_core.py  stats_core.py  template_manager.py  visualize_core.py
src/markshark/templates/: .preferences.json
src/markshark/templates/MarkShark-232Q/: bubblemap.yaml
src/markshark/templates/MarkShark-64Q/: bubblemap.yaml
src/markshark/templates/MarkShark-80Q/: bubblemap.yaml
src/markshark/templates/MarkShark-dbl-test/: bubblemap.yaml
src/markshark/templates/quick_grade_m2jqste9/: quick_grade_results.csv
src/markshark/tools/: align_tools.py  bubble_score.py  bubble_stats.py  bubblemap_io.py  io_pages.py  report_tools copy.py  report_tools.py  scan_aligner.py  score_tools.py  visualizer_tools.py  zone_visualizer.py
template_vector/: examplekey.txt
template_vector/64 question/: 64Q-bubblemap.yaml  64Q-template.afdesign
template_vector/UT_MED/: UTMED-bubblemap.yaml  UTMEDp1.afdesign
template_vector_art/80 question/: 80Q-template.afdesign
template_vector_art/UT_MED/: UTMED-bubblemap.yaml  UTMEDp2.afdesign
templates/232 question/pages/: Backpage.afdesign  Frontpage.afdesign
templates/64 question/: 64Q-config.yaml  64Q-template.afdesign
templates/80 question/: 80Q-bubblemap.yaml  80Q-config.yaml
templates/ArUco markers/: make_aruco.py
templates/UT_MED/: UTMED.yaml
