[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "markshark"
# Remove the fixed `version = "..."` line
dynamic = ["version"]
description = "MarkSharkOMR — the open-source bubble hunter (Optical Mark Recognition toolkit)"
authors = [
  { name = "William Navarre", email = "william.navarre@utoronto.ca" }
]
license = { text = "AGPL-3.0-only with dual commercial licensing available; contact william.navarre@utoronto.ca" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Education",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "opencv-contrib-python>=4.9",
  "numpy>=1.26,<2.0",
  "pillow>=10.0",
  "pymupdf>=1.24",
  "pdf2image>=1.17",
  "pandas>=2.1,<2.3",
  "matplotlib>=3.8",
  "streamlit>=1.35",
  "pyyaml",
]

[project.scripts]
markshark    = "markshark.cli:app_main"
markshark-gui = "markshark.gui_launcher:main"
bubble-omr   = "markshark.cli:app_main"  # temporary alias

# Tell Hatch to derive the version from git tags
[tool.hatch.version]
source = "vcs"

# Optional: control how version strings are formed between tags
[tool.hatch.build.hooks.vcs]
# If no tag exists yet during a local build, use this placeholder
fallback-version = "0.1.0"